Added unit tests about stunnel sidecar container
Used constants for volume name and mount